--- a/frontend/src/app/navigation-bar/navigation-bar.component.css
+++ b/frontend/src/app/navigation-bar/navigation-bar.component.css
@@ -2,12 +2,13 @@ nav {
     background: linear-gradient(90deg, #001C36 0%, rgba(0, 28, 54, 0.8) 23.96%, rgba(0, 0, 0, 0) 100%);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
     height: 96px;
-    margin: 80px 80px 0px 80px;
+    margin: 50px 80px 0px 80px;
     width: 90%;
     position: absolute;
     display: flex;
     align-items: center;
     flex-direction: row;
+    clip-path: polygon(0 0, 100% 0%, 94% 100%, 0% 100%);
 }
 
 p {
