--- a/frontend/src/app/navigation-bar/navigation-bar.component.html
+++ b/frontend/src/app/navigation-bar/navigation-bar.component.html
@@ -1,14 +1,13 @@
 <nav>
     <img src="assets/EZ.png">
     <p class="kripix">KRIPIX</p>
-    <p>CLICKER</p>
-    <p>CASES</p>
-    <p>PROFILE</p>
+    <a routerLink="">CLICKER</a>
+    <a routerLink="shop">SHOP</a>
     <div class="spacer"></div>
     <div class="money">
         <i class="material-icons icon">
         monetization_on
         </i>
-        <span>1000</span>
+        <span>{{money}}</span>
     </div>
 </nav>
