--- a/frontend/src/app/navigation-bar/navigation-bar.component.html
+++ b/frontend/src/app/navigation-bar/navigation-bar.component.html
@@ -1,13 +1,15 @@
-<nav>
-    <img src="assets/EZ.png">
-    <p class="kripix">KRIPIX</p>
-    <a routerLink="">CLICKER</a>
-    <a routerLink="shop">SHOP</a>
-    <div class="spacer"></div>
-    <div class="money">
-        <i class="material-icons icon">
-        monetization_on
-        </i>
-        <span>{{money}}</span>
-    </div>
-</nav>
+
+    <nav>
+        <img src="assets/EZ.png">
+        <p class="kripix">KRIPIX</p>
+        <a routerLink="">CLICKER</a>
+        <a routerLink="shop">SHOP</a>
+        <a routerLink="profile">PROFILE</a>
+        <div class="spacer"></div>
+        <div class="money">
+            <i class="material-icons icon">
+            monetization_on
+            </i>
+            <span>{{money | number}}</span>
+        </div>
+    </nav>
