--- a/frontend/src/app/component/login/login.component.html
+++ b/frontend/src/app/component/login/login.component.html
@@ -1,14 +1,14 @@
 <div class="center">
     <div class="container">
         <div class="text">Login Form</div>
-        <form action="#">
+        <form [formGroup]="loginGroup" (ngSubmit)="login()">
             <div class="data">
-                <label>Email or Phone</label>
-                <input type="text" required>
+                <label>Username</label>
+                <input type="text" formControlName="username" required>
             </div>
             <div class="data">
                 <label>Password</label>
-                <input type="password" required>
+                <input type="password" formControlName="password" required>
             </div>
             <div class="forgot-pass">
                 <a href="#">Forgot Password?</a>
@@ -16,7 +16,7 @@
             <div class="btn">
                 <div class="inner">
                 </div>
-                <button type="submit">login</button>
+                <button type="submit" [disabled]="!loginGroup.valid">login</button>
             </div>
             <div class="signup-link">
                 Not a member? <a href="#">Signup now</a></div>
