--- a/frontend/src/app/component/shop/shop.component.css
+++ b/frontend/src/app/component/shop/shop.component.css
@@ -1,18 +1,16 @@
 .wrapper {
     width: 80%;
-    margin: 0 auto; 
     display: flex;
-    justify-content: center;
-    gap: 17%;
-    padding: 100px;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
 }
-p { 
+h3 { 
     color: white;
     text-transform: uppercase;
     font-size: 28px;
     text-align: center;
     margin: 0;
-    
 }
 .header{
     font-size: 35px;
@@ -25,6 +23,10 @@ p {
     margin-top: 40px;
     padding: 15px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 
