--- a/frontend/src/app/component/clicker/clicker.component.html
+++ b/frontend/src/app/component/clicker/clicker.component.html
@@ -1,5 +1,6 @@
 <section class="frame">
     <div class="clicker">
+        <div >5</div>
         <button (click)="onClick()" class="button-click">CLICK</button>
     </div>
 </section>
