--- a/frontend/src/app/component/navigation-bar/navigation-bar.component.html
+++ b/frontend/src/app/component/navigation-bar/navigation-bar.component.html
@@ -1,6 +1,6 @@
 
-    <nav (click)="toggle()">
-        <img [@fadeIn]="stateName" src="assets/EZ.png">
+    <nav>
+        <img [@fadeIn] src="assets/EZ.png">
         <p class="kripix">KRIPIX</p>
         <a routerLink="">CLICKER</a>
         <a routerLink="shop">SHOP</a>
