--- a/frontend/src/app/component/clicker/clicker.component.css
+++ b/frontend/src/app/component/clicker/clicker.component.css
@@ -1,17 +1,12 @@
-.frame {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-}
-
 .clicker{
     width: 316px;
     height: 107px;
     background: linear-gradient(180deg, #001C36 0%, rgba(0, 28, 54, 0.5) 100%);
     border-radius: 15px 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .button-click{
@@ -27,4 +22,9 @@
     outline: none;
     border: none;
 }
-
+div {
+    position: absolute;
+    left: 540px;
+    top: 350px;
+    color: green;
+}
