--- a/frontend/src/app/component/register/register.component.html
+++ b/frontend/src/app/component/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="center">
     <div class="container">
-        <div class="text">Login Form</div>
-        <form [formGroup]="loginGroup" (ngSubmit)="login()">
+        <div class="text">Register</div>
+        <form [formGroup]="loginGroup" (ngSubmit)="register()">
             <div class="data">
                 <label>Username</label>
                 <input type="text" formControlName="username" required>
@@ -13,10 +13,10 @@
             <div class="btn">
                 <div class="inner">
                 </div>
-                <button type="submit" [disabled]="!loginGroup.valid">login</button>
+                <button type="submit" [disabled]="!loginGroup.valid">register</button>
             </div>
             <div class="signup-link">
-                Not a member? <a routerLink="/register">Signup now</a></div>
+                Already a member? <a routerLink=" /login">Login</a></div>
         </form>
     </div>
 </div>
